--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "b3b89cfe-6c7d-4cd5-afb4-f93c7cde7461",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "bb1c21d5-6928-4fe7-8d4e-bdca41722702",
    "metadata": {},
    "outputs": [
@@ -107,7 +108,7 @@
        "4    15    13    11     9     7           5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "6c02694c-dd16-48e8-a3ba-14ec2b590154",
    "metadata": {},
    "outputs": [],
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "1c06d2b5-74e9-4776-96b7-fdfeef8e0979",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "4a24e94f-2d2b-47e6-b8e2-c8fc04f2e5fa",
    "metadata": {},
    "outputs": [],
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "d9b54b99-f925-4f40-97e9-357a9a71aacf",
    "metadata": {},
    "outputs": [
@@ -160,7 +161,7 @@
        "1.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "8f25edda-6f46-4c96-bcaf-177c9cc7eae5",
    "metadata": {},
    "outputs": [
@@ -181,7 +182,7 @@
        "array([-0.04294948, -0.03029024,  0.43535394,  0.43535394,  0.20253185])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "ef047cc4-04f8-4d0f-9ffa-382f2e3c83cc",
    "metadata": {},
    "outputs": [
@@ -202,7 +203,7 @@
        "-4.086786356708363"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "6eee51a6-9355-409a-b808-17b288724953",
    "metadata": {},
    "outputs": [],
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "4c647f12-91ed-4d4c-b651-b41e1f8dd2e2",
    "metadata": {},
    "outputs": [
@@ -231,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\enriq\\anaconda3\\envs\\robotics\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\enriq\\anaconda3\\envs\\robotics\\lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -241,7 +242,7 @@
        "'4.28'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "fb1e31f4-2e4b-4cb7-b5ad-7f71a0253dad",
    "metadata": {},
    "outputs": [],
@@ -273,6 +274,29 @@
     "# Save to a CSV file\n",
     "model.to_csv('data/model_weights.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/linear_regression_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(reg, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with open('linear_regression_model.pkl', 'rb') as file:\n",
+    "    loaded_model = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
